2005-07-23  Paolo Borelli  <pborelli@katamail.com>

	* gedit-utils.c: use gtk_button_set_image to build custom buttons.

2005-07-22  Paolo Maggi  <paolo@gnome.org>

	* gedit-prefs-manager.c (gconf_client_get_string_with_default):
	fixed bug #303943 (gedit crash). We were executing "*err = error" with
	err = NULL.

2005-07-22  Paolo Borelli  <pborelli@katamail.com>

	* gedit-view.c: do not scroll on copy.

2005-07-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit-prefs-manager.c: init unitialized variable, spotted
	by David Binderman.

	* gedit-metadata-manager.c: backport Paolo Maggi's fix from
	new_mdi so that the timeout callback is not stopped.

2005-06-08  Ray Strode  <rstrode@redhat.com>

	* gedit-file-selector-util.c: (replace_dialog):

	* gedit-file.c: (gedit_file_revert_dialog):
	(gedit_file_open_from_stdin):

	* gedit-io-error-dialogs.c: 
	(gedit_error_reporting_loading_file):
	(gedit_error_reporting_reverting_file):
	(gedit_error_reporting_saving_file):
	(gedit_error_reporting_creating_file):

	* gedit-utils.c: (gedit_warning): add "%s" as
	format string to message dialog functions

	Pass format string to message dialog functions (bug 306800).

2005-06-06  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-close-confirmation-dialog.c: make labels
	selectable. Patch by David A Knight.

==== gedit 2.10.2 ====

2005-04-04  Paolo Maggi  <paolo@gnome.org>

	* gedit2.c (gedit_handle_automation): does not free data and
	data->file_list before reading them.

2005-04-04  Paolo Borelli  <pborelli@katamail.com>

	* gedit2.c: fix leak in yesterday's focus patch.

2005-04-03  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-encodings-dialog.c: mark var as static, patch by
	Benoît Dejean.

2005-04-03  Paolo Borelli  <pborelli@katamail.com>

	* gedit-window-server.c:
	* gedit2.c: fix focus for the second and successive instances.

2005-04-03  Paolo Borelli  <pborelli@katamail.com>

	* gedit-application-server.c: