@@ -1,5 +1,9 @@
 2005-07-23  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit-debug.h: fix printing the function name.
+
+2005-07-23  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit-utils.c: use gtk_button_set_image to build custom buttons.
 
 2005-07-22  Paolo Maggi  <paolo@gnome.org>
